<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_pref_header">

        <Preference
            android:summary="profile"
            app:key="profile"
            app:title="@string/title_profile"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_privacy"
            android:summary="Posting your records anonymously"
            android:title="Privacy Setting" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/additional_settings_header">

        <ListPreference
            android:defaultValue="metric"
            android:key="unit"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:title="@string/unit_pref_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="Please enter your exerciseEntries"
            app:key="exerciseEntries"
            app:title="@string/comments_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc_header">

        <Preference
            android:summary="cs.dartmouth.edu"
            app:key="page"
            app:title="@string/title_web_page"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>