<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_profile_picture"
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="20dp"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/button_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:onClick="onChangeButtonClick"
                    android:text="@string/button_change" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:hint="@string/hint_input_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_email"
               />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_input"
                    android:maxLength="30"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_major"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_your_major"
                    android:maxLength="30"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_phone"
              />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_input_phone"
                    android:inputType="phone"
                    android:maxLength="16"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/text_gender"
             />

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="onRadioButtonClicked"
                    android:layout_weight="1"
                    android:text="@string/radio_female" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_male" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_class"
                android:layout_margin="2dp"
              />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_class_input"
                    android:inputType="number"
                    android:maxLength="4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSaveButtonClick"
                    android:layout_margin="5dp"
                    android:text="@string/button_save" />

                <Button
                    android:id="@+id/button_sync"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCancelButtonClick"
                    android:text="@string/button_cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>



