<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/input_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_type" />

        <Spinner
            android:id="@+id/spinner_input_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/activity_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_type" />

        <Spinner
            android:id="@+id/spinner_activity_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/button_start1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="80dp"
            android:text="@string/text_start" />

        <Button
            android:id="@+id/button_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_sync" />

    </LinearLayout>


</ScrollView>